@@ -1,1 +1,1 @@
-#define E2RETRIEVE_VERSION "20051011"
+#define E2RETRIEVE_VERSION "20051125"
